# bmi323-rs

./: CHANGELOG.md  Cargo.toml  README.md
examples/embassy-stm32-implementation/: Cargo.toml
examples/embassy-stm32-implementation/src/: hal_compat.rs  main.rs
examples/peripheral-crate-implementation/: .gitignore  Cargo.toml  build.rs  memory.x
examples/peripheral-crate-implementation/.cargo/: config.toml
examples/peripheral-crate-implementation/src/: main.rs
src/: bmi3_core.rs  bmi3_defs.rs  bmi3_macros.rs  bmi3_sens_axes.rs  bmi3_types.rs  bmi3dev.rs  bmi3mapint.rs  config.rs  device.rs  enums.rs  error.rs  get_sensor_config.rs  interface.rs  lib.rs  registers.rs  sensor_data.rs  set_accel_sensor_config.rs  set_gyro_sensor_config.rs  types.rs
tests/: integration_tests.rs  unit_tests_sensor_data.rs  unit_tests_types.rs
