[package]
name = "bmi323"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Wyatt Mattas <mattaswm@gmail.com>"]
repository = "https://github.com/wyatt-mattas/bmi323_scratch/"
keywords = ["inertial", "accelerometer", "gyroscope", "imu", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
# micromath = "2.1.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1"] }
