[package]
name = "bmi323"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Wyatt Mattas <mattaswm@gmail.com>"]
repository = "https://github.com/wyatt-mattas/bmi323-rs/"
keywords = [
    "inertial",
    "accelerometer",
    "gyroscope",
    "imu",
    "embedded-hal-driver",
]
categories = ["embedded", "hardware-support", "no-std"]
license = "Apache-2.0"
documentation = "https://docs.rs/bmi323"

include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
]

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1"] }
