[package]
authors = ["wyatt mattas <mattaswm@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32h5-rs"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
# cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
bmi323= { git = "https://github.com/wyatt-mattas/bmi323-rs/", branch = "main"}
embedded-hal = "1.0.0"
# heapless = "0.8.0"
# rtt-target = "0.4.0"

[dependencies.stm32h5]
git = "https://github.com/stm32-rs/stm32-rs-nightlies"
default-features = false
features = ["stm32h563"]

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32h5-rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations


# [build-dependencies]
# bindgen = "0.69.2"
# cc = "1.0.83"